--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.24.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "shopify-buy": "^3.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
